# eld-logs-spotter

./: .env  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
eld_logs/: .env.example  .gitignore  celery.py  celery_health_check.py  conftest.py  manage.py  pyproject.toml  requirements.txt
eld_logs/core/: asgi.py  settings.py  urls.py  wsgi.py
eld_logs/core/settings/: base.py  local.py  prod.py
eld_logs/eld_logs/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
eld_logs/eld_logs/settings/: __init__.py  base.py  local.py  prod.py  production.py  test.py
eld_logs/route_calculator/: admin.py  apps.py  consumers.py  exceptions.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
eld_logs/route_calculator/migrations/: 0001_initial.py  0002_tripcalculation_map_error_message_and_more.py  0003_tripcalculation_map_url.py
eld_logs/route_calculator/services/: hos_calculator.py  log_generator.py  map_generator.py  route_service.py  storage_service.py  test_log_generator.py  test_map_generator.py
eld_logs/route_calculator/services/tests/: test_map_generator.py  test_route_service.py
eld_logs/route_calculator/tests/: factories.py  log_generator_local_test.py  map_generator_local_test.py  test_consumers.py  test_hos_calculator.py  test_log_generator.py  test_map_generator.py  test_models.py  test_storage_service.py  test_tasks.py  test_views.py
eld_logs_frontend/: .env.d.ts  .env.example  .env.production  .gitignore  .prettierignore  .prettierrc  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
eld_logs_frontend/app/: globals.css  layout.tsx  page.tsx
eld_logs_frontend/components/: providers.tsx  trip-dashboard.tsx  trip-form.tsx  trip-logs.tsx  trip-map.tsx  trip-progress.tsx
eld_logs_frontend/components/ui/: sidebar.tsx
eld_logs_frontend/hooks/: use-toast.ts  use-trip-progress.ts  use-trip.ts
eld_logs_frontend/lib/: env.ts  wake-up-service.ts
eld_logs_frontend/lib/api/: client.ts  types.ts
eld_logs_frontend/lib/websocket/: trip-progress.ts
eld_logs_frontend/services/: tripProgressService.ts
nginx/: Dockerfile  nginix.conf
