[project]
name = "eld-logs"
version = "0.1.0"
description = "ELD logs and route planning API"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "Django==6.0.0",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "celery==5.6.0",
    "redis==7.1.0",
    "openrouteservice==2.3.3",
    "Pillow==12.0.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "python-decouple==3.8",
]

[tool.uv]
compile-bytecode = true
resolution = "highest"
